--- a/app/src/main/res/layout/main_screen_list_item.xml
+++ b/app/src/main/res/layout/main_screen_list_item.xml
@@ -46,14 +46,14 @@
                 android:textAllCaps="true"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/colorPrimary"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 tools:text="@string/category_pasteis_de_belem" />
 
         </LinearLayout>
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="@dimen/line_height_under_items"
             android:background="@color/colorPrimary" />
 
     </LinearLayout>
