--- a/app/src/main/res/layout/main_screen_list_item.xml
+++ b/app/src/main/res/layout/main_screen_list_item.xml
@@ -35,14 +35,11 @@
 
             <TextView
                 android:id="@+id/tv_category"
-                android:layout_width="wrap_content"
+                android:layout_width="60dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="@dimen/activity_margin"
                 android:background="@color/colorAccent"
-                android:gravity="center_vertical"
+                android:gravity="center"
                 android:minHeight="?android:attr/listPreferredItemHeightSmall"
-                android:paddingLeft="@dimen/activity_margin"
-                android:paddingRight="@dimen/activity_margin"
                 android:textAllCaps="true"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/colorPrimary"
