Category color tabs.

--- a/app/src/main/res/layout/main_screen_list_item.xml
+++ b/app/src/main/res/layout/main_screen_list_item.xml
@@ -42,7 +42,7 @@
                 android:minHeight="?android:attr/listPreferredItemHeightSmall"
                 android:textAllCaps="true"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@android:color/white"
                 android:textSize="16sp"
                 tools:text="@string/category_pasteis_de_belem" />
 
@@ -55,7 +55,7 @@
                 android:minHeight="?android:attr/listPreferredItemHeightSmall"
                 android:textAllCaps="true"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@android:color/white"
                 android:textSize="16sp"
                 tools:text="@string/category_pasteis_de_belem" />
 
