--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#00BCD4</color>
     <color name="colorPrimaryDark">#0097A7</color>
     <color name="colorAccent">#84FFFF</color>
+
+    <color name="eat_tab">#FBC02D</color>
+    <color name="shop_tab">#388E3C</color>
+    <color name="see_tab">#0288D1</color>
 </resources>
