--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="eat_tab">#FBC02D</color>
     <color name="shop_tab">#388E3C</color>
     <color name="see_tab">#0288D1</color>
+    <color name="trans_tab">#D32F2F</color>
 </resources>
