--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="shop_tab">#388E3C</color>
     <color name="see_tab">#0288D1</color>
     <color name="trans_tab">#D32F2F</color>
+    <color name="stay_tab">#F57C00</color>
 </resources>
